# zephyr_crypto_psa_stm32

./: CMakeLists.txt  Kconfig  prj.conf
boards/: nucleo_u385rg_q.overlay
crypto_wrapper/: CMakeLists.txt
crypto_wrapper/include/: kwe_config.h  mbedtls_alt_config.h  mbedtls_config.h  stm32_crypto_wrapper.h  stm32u3xx_hal_conf.h.do_not_use  stm32u3xx_it.h  storage_interface.h
crypto_wrapper/middlewares/ST/: CMakeLists.txt
crypto_wrapper/middlewares/ST/mbedtls_alt/interfaces/patterns/: CMakeLists.txt  psa_its_alt.c
crypto_wrapper/src/: stm32_crypto_wrapper.c  stm32u3xx_hal_msp.c  storage_interface.c  storage_interface_do_not_add.c  storage_interface_zfs.c
src/: main.c  stm32_crypto_wrapper.c  stm32_crypto_wrapper.h
